add custom download