@@ -20,7 +20,7 @@ public class Recorder {
 	private static Logger logger = LoggerFactory.getLogger(Recorder.class);
 
 	private static SimpleDateFormat dateFormat = new SimpleDateFormat("yy-MM-dd_HH-mm-ss");
-	private static String startFormatCmd = "./Recorder -h %s -p %s -a %s -c %s -o %s -k %s";
+	private static String startFormatCmd = "./Recorder -h %s -p %s -a %s -c %s -o %s -k %s ";
 
 	private String appid;
 	private String cid;
@@ -28,13 +28,15 @@ public class Recorder {
 	private String uniqueKey;
 	private String port;
 	private String fileName;
+	private String uid;
 
-	public Recorder(String appid, String cid, String addr, String port, String uniqueKey, String fileName) {
+	public Recorder(String appid, String cid, String addr, String port, String uniqueKey, String uid, String fileName) {
 		this.addr = addr;
 		this.appid = appid;
 		this.uniqueKey = uniqueKey;
 		this.cid = cid;
 		this.port = port;
+		this.uid = uid;
 		this.fileName = fileName;
 	}
 
@@ -52,38 +54,31 @@ public class Recorder {
 		if (!StringUtils.isEmpty(localIp)) {
 			addr = localIp;
 		}
-
-//		List<String> cmds = getStartProcessCmd(dir);
-//		ProcessBuilder pb = new ProcessBuilder(cmds);
-//		pb.start();
 		
-		String command = getStartProcessCmdTest(dir);
-		Runtime.getRuntime().exec(command);
+		List<String> cmds = getStartRecordProcessCmd(dir);
+		ProcessBuilder pb = new ProcessBuilder(cmds);
+		pb.start();
+		
 	}
 
-	public void stop() throws Exception {
+	public void stop() throws IOException {
 		String pid = getProcessPid();
-		logger.info("stop process pid:{}", pid);
 		if (pid == null) {
 			return;
 		}
-		String command = "kill -3 " + pid;
-		Process killPro = Runtime.getRuntime().exec(command);
-		killPro.destroy();
-//		List<String> cmds = new ArrayList<>();
-//		cmds.add("kill");
-//		cmds.add("-3");
-//		cmds.add(pid);
-//		ProcessBuilder pb = new ProcessBuilder(cmds);
-//		pb.start();
+		String command = "kill -15 " + pid;
+		Runtime.getRuntime().exec(command);
 	}
 
-	private List<String> getStartProcessCmd(String dir) throws IOException {
+	private List<String> getStartRecordProcessCmd(String dir) throws IOException {
 		List<String> cmds = new ArrayList<>();
 		String cmd = String.format(startFormatCmd, addr, port, appid, cid.replaceAll("\\|", "\\\\|"), dir, uniqueKey);
 		String logFile = dir + "result.log";
 
 		StringBuilder builder = new StringBuilder(cmd);
+		if (this.uid != null && this.uid.length() > 0) {
+			builder.append(" -u ").append(this.uid);
+		}
 		if (this.fileName != null && this.fileName.length() > 0) {
 			builder.append(" --file ").append(fileName);
 			logFile = dir + fileName + ".log";
@@ -97,8 +92,6 @@ public class Recorder {
 			logger.warn("create log file error,path={}", logFile);
 		}
 		builder.append(" > ").append(logFile).append(" 2>&1 &");
-		
-		logger.info("start process cmd: {}", builder.toString());
 
 		cmds.add("sh");
 		cmds.add("-c");
@@ -107,38 +100,13 @@ public class Recorder {
 		return cmds;
 	}
 	
-	private String getStartProcessCmdTest(String dir) throws IOException {
-		String cmd = String.format(startFormatCmd, addr, port, appid, cid.replaceAll("\\|", "\\\\|"), dir, uniqueKey);
-		String logFile = dir + "result.log";
-
-		StringBuilder builder = new StringBuilder(cmd);
-		if (this.fileName != null && this.fileName.length() > 0) {
-			builder.append(" --file ").append(fileName);
-			logFile = dir + fileName + ".log";
-		}
-		if (Config.instance().isMixMode()) {
-			builder.append(" -m");
-		}
-
-		File logs = new File(logFile);
-		if (!logs.createNewFile()) {
-			logger.warn("create log file error,path={}", logFile);
-		}
-		builder.append(" > ").append(logFile).append(" &");
-		
-		logger.info("start process cmd: {}", builder.toString());
-
-		return builder.toString();
-	}
-
-
 	private String getProcessPid() throws IOException {
 		String pid = null;
 		Process pro = Runtime.getRuntime().exec("ps -ef");
 		BufferedReader reader = new BufferedReader(new InputStreamReader(pro.getInputStream()));
 		String line = null;
 		while ((line = reader.readLine()) != null) {
-			if (checkIsProcess(line)) {
+			if (checkIsRecordProcess(line)) {
 				logger.info("line:{}", line);
 				String[] strs = line.split("\\s+");
 				if (strs.length > 2) {
@@ -154,11 +122,16 @@ public class Recorder {
 
 	}
 
-	private boolean checkIsProcess(String line) {
+	private boolean checkIsRecordProcess(String line) {
 		if (!line.contains(appid) || !line.contains(cid.replaceAll("\\|", "\\\\|"))
-				|| (fileName != null && !line.contains(fileName))) {
+				|| (uid != null && !line.contains(uid))) {
 			return false;
 		}
+		
 		return true;
+	}
+	
+	public boolean checkIsSameRecord(String cid, String uniqueKey) {
+		return cid.equals(this.cid) && uniqueKey.equals(this.uniqueKey);
 	}
 }
